css/main.css
body {
	padding-top: 50px;
	padding-bottom: 50px;
	background-color: #BFE2CA;
	overflow-x: hidden;
}
a {
	text-decoration: none !important;;
}
.transparent {
	opacity: 0.6;
}
.myicon {
	font-size: 1.3em;
}
.c_light {
	background-color: #D0E2EC;
}
.c_blue {
	background-color: #A6DAEF;
}
.c_yellow {
	background-color: #F0E0A2;
}
.c_red {
	background-color: #FED1BE;
}
.c_purple {
	background-color: #BFB1D5;
}
.c_brown {
	background-color: #D3B9AA;
}
.c_main {
	background-color: #BFE2CA;
}
.c_main_light {
	background-color: #dcefe2;
}
.c_dirty {
	background-color: #8BACBD;
}
.imgicon {
	min-width: 30px;
	width: 30px;
	max-width: 30px;
	min-height: 30px;
	height: 30px;
	max-height: 30px;
	overflow:hidden;
	display: inline-block;
}
.row-eq-height {
	display: -webkit-box;
	display: -webkit-flex;
	display: -ms-flexbox;
	display: flex;
}
.fadein {
	-webkit-transition: background 10s linear;
	-moz-transition: background 10s linear;
	-ms-transition: background 10s linear;
	-o-transition: background 10s linear;
	transition: background 10s linear;
}
.fadefast {
	-webkit-transition: background 10s linear -5s;
	-moz-transition: background 10s linear -5s;
	-ms-transition: background 10s linear -5s;
	-o-transition: background 10s linear -5s;
	transition: background 10s linear -5s;
}
.pointer {
	cursor: pointer;
}
.bigfont {
	font-size: 2em;
}
.mediumfont {
	font-size: 1.17em;
}
.inithidden {
	display:  none !important
}
.no-margin-padding {
	margin: 0;
	padding: 0;
}
.no-margin-padding-bottom {
	margin-bottom: 0;
	padding-bottom: 0;
}
.floatleft {
	float:left;
	width: 33.333333333333333%;
	margin-right: 5px;
}
.floatright {
	float:right;
	width: 33.333333333333333%;
	margin-left: 5px;
}
.widthlimited {
	max-width: 100%;
}
.fixed {
	position: fixed;
}

